# env-alias

./: .flake8  .gitignore  .readthedocs.yml  .safety-policy.yml  .travis.yml  CHANGELOG.md  README.md  package.yml  pyproject.toml  setup.py
.changelog/: 0.3.1.toml  0.3.1.yml  0.3.3.toml  0.3.3.yml  0.3.4.toml  0.3.4.yml  0.3.5.toml  0.3.5.yml  0.3.6.toml  0.3.6.yml  0.3.7.toml  0.3.7.yml  0.3.8.toml  0.3.8.yml  0.4.0.toml  0.4.0.yml  0.5.1.toml  _unreleased.yml
.github/workflows/: build-tests.yml
EnvAlias/: __init__.py  __name__.py  config.py  content.py  exceptions.py  logger.py  main.py  selector.py
docs/: .readthedocs-requirements.txt  .readthedocs.yaml  build.novella  configuration-parsers.md  configuration-selectors.md  configuration-sources.md  configuration.md  examples-debug.md  examples-larger.md  examples-simple.md  mkdocs.yml  project.md  pydoc-markdown.yml
docs/content/: development.md  index.md  license.md  project.md
docs/content/definition-attributes/: ansible-vault-password-file.md  ansible-vault-password.md  exec.md  keepass-password.md  name.md  override.md  overview.md  parser.md  selector.md  source.md  value-to.md  value.md
docs/content/examples/: ansible-project.md  aws-credentials.md  debugging.md  terraform-aws-project.md
examples/: env-ansible-project.yml  env-aws-account.yml  env-gcloud-account.yml  env-terraform-project.yml
samples/: env-alias-sample.yml
src/env_alias/: EnvAlias.py  EnvAliasGenerator.py  __init__.py  env_alias.py  env_alias_generator.py  exceptions.py  main.py
src/env_alias/cli/: entrypoints.py
src/env_alias/exceptions/: EnvAliasException.py  __init__.py
src/env_alias/lib/: definitions.py  generator.py  logger.py  selector.py  source.py
src/env_alias/models/: envalias_definition.py  sourced_content.py
src/env_alias/utils/: config.py  content.py  logger.py  selector.py
src/tests/: __init__.py  test_basic.py  test_direct.py  test_exec.py  test_local_ini.py  test_local_json.py  test_local_text.py  test_local_yaml.py  test_remote.py
src/tests/configs/: direct_02.yml  exec_02.yml  exec_03.yml  exec_04.yml  local_ini_01.yml  local_ini_02.yml  local_json_02.yml  local_text_02.yml  local_yaml_02.yml  remote_json_01.yml
src/tests/samples/: local.ini  local.json  local.txt  local.yml
tests/: __init__.py  test_ansible_vault_password_file.py  test_ansible_vault_source.py  test_basic.py  test_direct.py  test_exec.py  test_exec_source.py  test_keepass_source.py  test_local_ini.py  test_local_json.py  test_local_text.py  test_local_yaml.py  test_override.py  test_remote.py  test_remote_source.py  test_value_to.py
tests/data/: envalias-ansible-vault-datafile-password.txt  envalias-ansible-vault-datafile.vault  envalias-keepass-database-password.txt  envalias-keepass-database.kdbx
tests/manual/: ansible_vault_01.yml  ansible_vault_password_file_01.yml  direct_01.yml  direct_03.yml  exec_01.yml  exec_04.yml  exec_bad_01.yml  inputs_01.yml  keepass_01.yml  local_ini_03.yml  local_json_01.yml  local_text_01.yml  local_yaml_01.yml  overrides_01.yml  remote_json_02.yml  remote_text_01.yml
